# resources/empresa/router.js
@@ -1,0 +1,11 @@
+import { Router } from 'express';
+import { empresaController } from './controller.js';
+import { upload } from '../../utils/uploader.js';
+
+const router = Router();
+
+router.post('/', upload.single('file'), (req, res) => {
+  empresaController.create(req, res);
+});
+
+export default router;
